// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paginator correctly applies the theme context className 1`] = `
<ThemeContextProvider
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  theme={
    Object {
      "className": "orion-fusion-theme",
    }
  }
>
  <InjectIntl(Paginator)
    onPageChange={[Function]}
  >
    <Paginator
      intl={
        Object {
          "defaultFormats": Object {},
          "defaultLocale": "en",
          "formatDate": [Function],
          "formatHTMLMessage": [Function],
          "formatMessage": [Function],
          "formatNumber": [Function],
          "formatPlural": [Function],
          "formatRelative": [Function],
          "formatTime": [Function],
          "formats": Object {},
          "formatters": Object {
            "getDateTimeFormat": [Function],
            "getMessageFormat": [Function],
            "getNumberFormat": [Function],
            "getPluralFormat": [Function],
            "getRelativeFormat": [Function],
          },
          "locale": "en",
          "messages": null,
          "now": [Function],
          "onError": [Function],
          "textComponent": "span",
          "timeZone": null,
        }
      }
      onPageChange={[Function]}
    >
      <ResponsiveElement
        onChange={[Function]}
        responsiveTo="parent"
      >
        <div
          aria-label="pagination"
          className="paginator pageless orion-fusion-theme"
          role="navigation"
        >
          <PaginatorButton
            ariaDisabled={false}
            ariaLabel="Terra.paginator.previous"
            className="nav-link left-controls previous icon-only"
            disabled={false}
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <button
              aria-disabled={false}
              aria-label="Terra.paginator.previous"
              className="nav-link left-controls previous icon-only"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              type="button"
            >
              <VisuallyHiddenText
                text="Terra.paginator.previous"
              >
                <span
                  className="visually-hidden-text"
                >
                  Terra.paginator.previous
                </span>
              </VisuallyHiddenText>
              <span
                className="icon"
              />
            </button>
          </PaginatorButton>
          <PaginatorButton
            ariaDisabled={false}
            ariaLabel="Terra.paginator.next"
            className="nav-link right-controls next icon-only"
            disabled={false}
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <button
              aria-disabled={false}
              aria-label="Terra.paginator.next"
              className="nav-link right-controls next icon-only"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              type="button"
            >
              <VisuallyHiddenText
                text="Terra.paginator.next"
              >
                <span
                  className="visually-hidden-text"
                >
                  Terra.paginator.next
                </span>
              </VisuallyHiddenText>
              <span
                className="icon"
              />
            </button>
          </PaginatorButton>
        </div>
      </ResponsiveElement>
    </Paginator>
  </InjectIntl(Paginator)>
</ThemeContextProvider>
`;

exports[`Paginator should render a default paginator - Large 1`] = `
<ResponsiveElement
  onChange={[Function]}
  responsiveTo="parent"
>
  <div
    className="paginator"
  >
    <PaginatorButton
      ariaDisabled={true}
      ariaLabel="Terra.paginator.first"
      className="nav-link left-controls is-disabled"
      disabled={true}
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      Terra.paginator.first
    </PaginatorButton>
    <PaginatorButton
      ariaDisabled={true}
      ariaLabel="Terra.paginator.previous"
      className="nav-link left-controls previous is-disabled"
      disabled={true}
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      <span
        className="icon"
      />
      Terra.paginator.previous
    </PaginatorButton>
    <PaginatorButton
      ariaCurrent={true}
      ariaLabel="Terra.paginator.pageIndex"
      className="nav-link is-selected"
      key="pageButton_1"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="-1"
    >
      1
    </PaginatorButton>
    <PaginatorButton
      ariaCurrent={false}
      ariaLabel="Terra.paginator.pageIndex"
      className="nav-link"
      key="pageButton_2"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
    >
      2
    </PaginatorButton>
    <PaginatorButton
      ariaCurrent={false}
      ariaLabel="Terra.paginator.pageIndex"
      className="nav-link"
      key="pageButton_3"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
    >
      3
    </PaginatorButton>
    <PaginatorButton
      ariaCurrent={false}
      ariaLabel="Terra.paginator.pageIndex"
      className="nav-link"
      key="pageButton_4"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
    >
      4
    </PaginatorButton>
    <PaginatorButton
      ariaCurrent={false}
      ariaLabel="Terra.paginator.pageIndex"
      className="nav-link"
      key="pageButton_5"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
    >
      5
    </PaginatorButton>
    <PaginatorButton
      ariaCurrent={false}
      ariaLabel="Terra.paginator.pageIndex"
      className="nav-link"
      key="pageButton_6"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
    >
      6
    </PaginatorButton>
    <PaginatorButton
      ariaCurrent={false}
      ariaLabel="Terra.paginator.pageIndex"
      className="nav-link"
      key="pageButton_7"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
    >
      7
    </PaginatorButton>
    <PaginatorButton
      ariaCurrent={false}
      ariaLabel="Terra.paginator.pageIndex"
      className="nav-link"
      key="pageButton_8"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
    >
      8
    </PaginatorButton>
    <PaginatorButton
      ariaCurrent={false}
      ariaLabel="Terra.paginator.pageIndex"
      className="nav-link"
      key="pageButton_9"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
    >
      9
    </PaginatorButton>
    <PaginatorButton
      ariaCurrent={false}
      ariaLabel="Terra.paginator.pageIndex"
      className="nav-link"
      key="pageButton_10"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
    >
      10
    </PaginatorButton>
    <PaginatorButton
      ariaDisabled={false}
      ariaLabel="Terra.paginator.next"
      className="nav-link right-controls next"
      disabled={false}
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      Terra.paginator.next
      <span
        className="icon"
      />
    </PaginatorButton>
    <PaginatorButton
      ariaDisabled={false}
      ariaLabel="Terra.paginator.last"
      className="nav-link right-controls"
      disabled={false}
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      Terra.paginator.last
    </PaginatorButton>
  </div>
</ResponsiveElement>
`;

exports[`Paginator should render a default paginator - Tiny 1`] = `
<ResponsiveElement
  onChange={[Function]}
  responsiveTo="parent"
>
  <div
    className="paginator"
  >
    <PaginatorButton
      ariaDisabled={true}
      ariaLabel="Terra.paginator.first"
      className="nav-link left-controls is-disabled"
      disabled={true}
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      Terra.paginator.first
    </PaginatorButton>
    <PaginatorButton
      ariaDisabled={true}
      ariaLabel="Terra.paginator.previous"
      className="nav-link left-controls previous is-disabled"
      disabled={true}
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      <span
        className="icon"
      />
      Terra.paginator.previous
    </PaginatorButton>
    <PaginatorButton
      ariaCurrent={true}
      ariaLabel="Terra.paginator.pageIndex"
      className="nav-link is-selected"
      key="pageButton_1"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="-1"
    >
      1
    </PaginatorButton>
    <PaginatorButton
      ariaCurrent={false}
      ariaLabel="Terra.paginator.pageIndex"
      className="nav-link"
      key="pageButton_2"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
    >
      2
    </PaginatorButton>
    <PaginatorButton
      ariaCurrent={false}
      ariaLabel="Terra.paginator.pageIndex"
      className="nav-link"
      key="pageButton_3"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
    >
      3
    </PaginatorButton>
    <PaginatorButton
      ariaCurrent={false}
      ariaLabel="Terra.paginator.pageIndex"
      className="nav-link"
      key="pageButton_4"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
    >
      4
    </PaginatorButton>
    <PaginatorButton
      ariaCurrent={false}
      ariaLabel="Terra.paginator.pageIndex"
      className="nav-link"
      key="pageButton_5"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
    >
      5
    </PaginatorButton>
    <PaginatorButton
      ariaCurrent={false}
      ariaLabel="Terra.paginator.pageIndex"
      className="nav-link"
      key="pageButton_6"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
    >
      6
    </PaginatorButton>
    <PaginatorButton
      ariaCurrent={false}
      ariaLabel="Terra.paginator.pageIndex"
      className="nav-link"
      key="pageButton_7"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
    >
      7
    </PaginatorButton>
    <PaginatorButton
      ariaCurrent={false}
      ariaLabel="Terra.paginator.pageIndex"
      className="nav-link"
      key="pageButton_8"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
    >
      8
    </PaginatorButton>
    <PaginatorButton
      ariaCurrent={false}
      ariaLabel="Terra.paginator.pageIndex"
      className="nav-link"
      key="pageButton_9"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
    >
      9
    </PaginatorButton>
    <PaginatorButton
      ariaCurrent={false}
      ariaLabel="Terra.paginator.pageIndex"
      className="nav-link"
      key="pageButton_10"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
    >
      10
    </PaginatorButton>
    <PaginatorButton
      ariaDisabled={false}
      ariaLabel="Terra.paginator.next"
      className="nav-link right-controls next"
      disabled={false}
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      Terra.paginator.next
      <span
        className="icon"
      />
    </PaginatorButton>
    <PaginatorButton
      ariaDisabled={false}
      ariaLabel="Terra.paginator.last"
      className="nav-link right-controls"
      disabled={false}
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      Terra.paginator.last
    </PaginatorButton>
  </div>
</ResponsiveElement>
`;

exports[`Paginator should render a paginator without page links - Large 1`] = `
<ResponsiveElement
  onChange={[Function]}
  responsiveTo="parent"
>
  <div
    className="paginator pageless"
  >
    <PaginatorButton
      ariaDisabled={false}
      ariaLabel="Terra.paginator.previous"
      className="nav-link left-controls previous"
      disabled={false}
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      <span
        className="icon"
      />
      Terra.paginator.previous
    </PaginatorButton>
    <PaginatorButton
      ariaDisabled={false}
      ariaLabel="Terra.paginator.next"
      className="nav-link right-controls next"
      disabled={false}
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      Terra.paginator.next
      <span
        className="icon"
      />
    </PaginatorButton>
  </div>
</ResponsiveElement>
`;

exports[`Paginator should render a paginator without page links - Tiny 1`] = `
<ResponsiveElement
  onChange={[Function]}
  responsiveTo="parent"
>
  <div
    className="paginator pageless"
  >
    <PaginatorButton
      ariaDisabled={false}
      ariaLabel="Terra.paginator.previous"
      className="nav-link left-controls previous"
      disabled={false}
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      <span
        className="icon"
      />
      Terra.paginator.previous
    </PaginatorButton>
    <PaginatorButton
      ariaDisabled={false}
      ariaLabel="Terra.paginator.next"
      className="nav-link right-controls next"
      disabled={false}
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      Terra.paginator.next
      <span
        className="icon"
      />
    </PaginatorButton>
  </div>
</ResponsiveElement>
`;
